--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=fsweb-s17d1
+server.port=8585
+spring.devtools.restart.quite-period=1000
+spring.devtools.restart.poll-interval=2000
+
+project.developer.fullname=alper
+course.name=java-fulltime
